<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Titles/Utility -->
    <string name="app_name">Celebrity Quiz</string>
    <string name="username">Username</string>
    <string name="back" />
    <string name="settings" />

    <string name="loginBtt">login</string>
    <string name="registerBtt">register</string>
    <string name="loginTxt">Login</string>
    <string name="logoutTxt">Logout</string>

    <string name="emailTxt">Email</string>
    <string name="pwTxt">Password</string>
    <string name="resultsTxt">Results</string>
    <string name="rankTxt">Rank</string>
    <string name="makeaccountTxt">Create a new account</string>

    <string name="settingsTitle">Level of Difficulty</string>
    <string name="level1">Level One</string>
    <string name="level2">level Two</string>
    <string name="level3">level Three</string>

    <string name="timeTitle">Choose Countdown</string>
    <string name="seconds30">30 Seconds</string>
    <string name="seconds60">60 Seconds</string>
    <string name="seconds90">90 Seconds</string>

    <string name="scoreContent">This is your score</string>
    <string name="scoreHeader">Score</string>

    <string name="textTime">30</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="koreaTxt">Only Korea</string>
    <string name="otherTxt">Any Countries</string>
    <string name="startQuiz">Start Quiz</string>
    <string name="setting">Setting</string>
    <string name="Rank">Rank</string>

</resources>
